Added auditable logics for all the entities in each respective controller

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
-				</configuration>
+				</configuration>\
 			</plugin>
 		</plugins>
 	</build>
