--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -11,13 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.1.4",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.4",
+    "@angular/material-moment-adapter": "^16.1.4",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ngxs/store": "^3.8.1-dev.master-c9c7f9e",
+    "angular-bootstrap": "^0.12.2",
+    "angular-typeahead": "^1.0.2",
+    "bootstrap": "^5.3.0",
+    "moment": "^2.29.4",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -27,6 +36,7 @@
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
